# as-cops-and-thieves

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/report/: justfile  report.md
docs/report/uml_graphs/: class_model.puml  orchestration_training_flow.puml  project_tree.puml  training_flow.puml
docs/slides/: config-slides.yaml
docs/slides/src/: 10-intro.md  20-progress-report-1.md  21-progress-report-2.md  22-progress-report-3.md  23-progress-report-4.md  bibliography.bib
docs/uml_graphs/: class_env.puml
maps_templates/: agh-map.json  grandbyrinth.json  labyrinth.json  lbirinth.json  squarinth.json
src/: driver.py  map_generator.ipynb  self_play_driver.py  self_play_eval.py
src/agents/: __init__.py  cop.py  entity.py  thief.py
src/configs/: __init__.py  mappo_config.py  training_config.py
src/environments/: __init__.py  base_env.py  observation_spaces.py  simple_env.py
src/maps/: __init__.py  map.py
src/maps/maps_templates/: grandbyrinth.json  labyrinth.json
src/models/: __init__.py  lstm_policy_net.py  lstm_value_net.py  policy_net.py  value_net.py
src/training/: __init__.py  orchestration.py
src/utils/: __init__.py  agent_learning_utils.py  eval_pfsp_agents.py  map_utils.py  model_utils.py  object_types.py  policy_archive_utils.py  toml_utils.py
