[project]
name = "as-cops-and-thieves"
version = "0.0.1"
description = "TODO"
authors = [
    {name = "Tomasz Kawiak", email = "qkawiak@gmail.com"},
    {name = "Mateusz Mazur", email = ""},
]
readme = "README.md"
requires-python = ">=3.6"

[tool.as-cops-and-thieves]
unit_velocity = 10.0
unit_mass = 1.0
unit_size = 2.0

[tool.visualization]
window_width = 1200
window_height = 800
background_color = [0, 0, 0]

