[project]
name = "as-cops-and-thieves"
version = "0.0.1"
description = "TODO"
authors = [
    {name = "Tomasz Kawiak", email = "qkawiak@gmail.com"},
    {name = "Mateusz Mazur", email = ""},
]
readme = "README.md"
requires-python = ">=3.6"

[tool.physical-params]
unit_velocity = 10.0
unit_mass = 1.0
unit_size = 5.0
max_speed = 125.0

[tool.visualization]
background_color = [0, 0, 0]
wall_color = [255, 255, 255]
